--- a/log.css
+++ b/log.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #1d1d38;
+    background-color: #000023;
     margin: 0; /* Remove default body margin */
 }
 
@@ -118,6 +118,9 @@ button{
 }
 button:active {
     transform: scale(0.95) ;
+}
+button:hover {
+    filter: brightness(90%);
 }
 
 button:focus{
